--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 	<h1>Coursera Practice</h1>
+	<br>
+	<h2>Hello World"</h2>
 	<p>Web developmant is awsome!!!!</p>
+	<br>
+	<p>My name is Malik Haseeb. abc </p>
 </body>
 </html>
